--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "check-password-strength": "^2.0.10",
     "clsx-tailwind-merge": "^1.0.4",
     "framer-motion": "^11.0.25",
+    "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
@@ -30,7 +33,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
